# opengl

./: .gitignore  BufferObject.h  Camera.h  FrameCounter.h  GLObjectHandles.h  GLScripts.h  HACKING.txt  Input.h  KeyboardManager.h  Model.h  Object.h  Quaternion.hpp  Shader.h  Shader.hpp  Texture.h  Transform.h  UBOScripts.h  Vector.hpp  Window.h  assert.glsl  assimp.h  cube_data.h  cubemap.frag  cubemap.vert  default.frag  default.vert  depth.vert  file_utils.h  fog.frag  fog.vert  light.frag  light.vert  lighting.glsl  lightsource.frag  lightsource.vert  main.cpp  meson.build  model_data.h  model_loader.cpp  postprocessing.frag  (+10 more)
.old/: model_data.h
.old/gl_objects/: BufferObject.h  Shader.h
.old/logic/: Camera.h
.old/pch/: pch.h
.old/shaders/: explode.frag  lighting.glsl  linalg.glsl  postprocessing.vert  projection.glsl  reflective.frag
.old/textures/backpack/: backpack.mtl
.old/textures/test_model/: model.blend
.old/utils/: make_shader.h  model_loader.cpp  registerAttributes.h
.old/world_scripts/: attributes.h
gl/: debug.h  load_image.h  make_buffer.h  make_texture.h  make_vao.h  shaders.h  uniform.h
gl/_/: preprocess_shader.h  register_attributes.h
gl/handle/: handle.h
gl_objects/: BufferObject.h  Framebuffer.h  Renderbuffer.h  Shader.h  Texture.h
glad/: meson.build
glad/src/: meson.build
logic/: Camera.h  Transform.h
math/: gen.h  projection.h
pch/: pch.h
shaders/: default.frag  default.geom  default.vert  depth.frag  depth.vert  explode.frag  explode.geom  explode.vert  lighting.glsl  postprocessing.frag  projection.glsl  reflective.frag  reflective.vert  skybox.frag  skybox.vert
util/: load_image.h  make_buffer.h  make_texture.h  make_vao.h
util/_/: register_attributes.h
util/math/: gen.h
utils/: ShaderParser.h  VertexResolver.h  model_loader.cpp  model_loader.h
window/: CallbackCapture.h  KeyboardManager.h  Window.h
world_scripts/: Input.h  UBOScripts.h
(+1 files in other folders)
